fix: EventDetails -> text spacing

--- a/Event_Tracker_App/Event.Tracker.Web/src/pages/EventDetails.css
+++ b/Event_Tracker_App/Event.Tracker.Web/src/pages/EventDetails.css
@@ -56,7 +56,7 @@
             max-height: 85%;
             min-height: 50%;
 
-            padding: 0% 4%;
+            padding: 0% 4% 5%;
 
             display: flex;
             flex-wrap: wrap;
